Add delay before transition

--- a/css/newcontacts.css
+++ b/css/newcontacts.css
@@ -52,7 +52,7 @@ body{
 /* header
 -----------------------------------------------------------------------------*/
 .header{
-  background: url(../images2/aniheader1.png);
+  background: url(../images2/aniheader.png);
   background-position: right top;
   background-repeat: no-repeat;
   padding: 0;
