--- a/css/new.css
+++ b/css/new.css
@@ -1,9 +1,10 @@
 /* Використані кольори
+#f8e7ba - основний колір body світло-жовтий
 #5D7274 - основний колір всього тексту сірий
-#EE9E69 - Додаткой колір світло оранжевий (h1,h2)
+#EE9E69 - Додаткой колір світло-оранжевий (h1,h2)
 #e47450 - додатковий яскраво-оранжевий (hover,active)
 #74A516 - додатковий колір зелений
-#BFF08E - додатковий колір світло зелений(footer)
+#BFF08E - додатковий колір світло-зелений(footer)
 */
 
 /**{
@@ -324,6 +325,7 @@ aside .muted {
   aside h3{
     font-size: 120%;}
 }
+
 .footer {
   height: 200px;
   background: url(../images2/footer1.png);
