дод колір і дороб програми

--- a/css/new.css
+++ b/css/new.css
@@ -1,6 +1,7 @@
 /* Використані кольори
 #f8e7ba - основний колір body світло-жовтий
 #5D7274 - основний колір всього тексту сірий
+#EBA830 - додатковий колір яскраво-жовтий
 #EE9E69 - Додаткой колір світло-оранжевий (h1,h2)
 #e47450 - додатковий яскраво-оранжевий (hover,active)
 #74A516 - додатковий колір зелений
