--- a/css/new.css
+++ b/css/new.css
@@ -183,13 +183,29 @@ nav .btn-group {
   display: none;
 }
 
+input[type="checkbox"] {
+    display: none;
+}
+nav label {    
+    display: none;
+    border: 1px solid #fff;   
+    padding: 5px 10px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+nav label:hover{
+    color: #f00;
+    border: 1px solid #f00;
+}
+
 @media (max-width: 768px) {
+
   .main-menu a{
     font-size: 10px;
     border-left:0;}
   .main-menu > li{
-    padding: 0px;
-    margin: 0px;
+    padding: 0;
+    margin: 0;
     margin-right: -7px;}
   .main-menu {
     margin-left: -12px;}
